fix login via username

--- a/platforms/browser/www/login.html
+++ b/platforms/browser/www/login.html
@@ -11,11 +11,11 @@
 					<li>
 						<div class="item-content">
 							<div class="item-media">
-								<i class="material-icons">mail_outline</i>
+								<i class="material-icons">person_outline</i>
 							</div>
 							<div class="item-inner">
 								<div class="item-input">
-									<input type="email" name="email" placeholder="Email" required />
+									<input type="text" name="username" placeholder="Username" required />
 								</div>
 								<div class="item-text input-error"></div>
 							</div>
