--- a/platforms/browser/www/top-up.html
+++ b/platforms/browser/www/top-up.html
@@ -1,4 +1,4 @@
-<div data-page="cart" class="page toolbar-fixed">
+<div data-page="top-up" class="page toolbar-fixed">
     <!-- Begin: Navbar -->
     <div class="navbar">
         <div class="navbar-inner">
@@ -7,7 +7,7 @@
                     <i class="icon icon-back"></i>
                 </a>
             </div>
-            <div class="center">Cart</div>
+            <div class="center">Top up</div>
         </div>
     </div>
     <!-- End: Navbar -->
@@ -23,13 +23,12 @@
                                 <div class="swipeout-content item-content">
                                     <div class="item-media">
                                         <!--<img src="https://www.dropbox.com/s/v7vadq9iitpheo4/iphone-7-plus-black.png?raw=1"-->
-                                             <!--alt="Apple iPhone 7 Plus (Black)"/>-->
+                                        <!--alt="Apple iPhone 7 Plus (Black)"/>-->
                                     </div>
                                     <div class="item-inner">
                                         <div class="item-title-row">
-                                            <div class="item-title" id="div-product-title"></div>
-                                            <div class="item-after" id="div-product" data-unit-price="70000">
-                                                $
+                                            <div class="item-title" id="div-product-title">Top up</div>
+                                            <div class="item-after" id="div-product">
                                                 <span class="product-amount">0</span>
                                             </div>
                                         </div>
@@ -53,54 +52,14 @@
                 </div>
             </div>
         </div>
-        <div class="card">
-            <div class="card-content">
-                <div class="list-block no-hairlines no-hairlines-between">
-                    <ul class="price-summary">
-                        <!--<li>-->
-                        <!--<div class="item-content">-->
-                        <!--<div class="item-inner">-->
-                        <!--<div class="item-title">Subtotal (<span class="product-count">0</span> Items)</div>-->
-                        <!--<div class="item-after">$<span class="subtotal">0</span></div>-->
-                        <!--</div>-->
-                        <!--</div>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                        <!--<div class="item-content">-->
-                        <!--<div class="item-inner">-->
-                        <!--<div class="item-title">Discount @ 10%</div>-->
-                        <!--<div class="item-after">$<span class="discount" data-discount-percent="10">0</span></div>-->
-                        <!--</div>-->
-                        <!--</div>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                        <!--<div class="item-content">-->
-                        <!--<div class="item-inner">-->
-                        <!--<div class="item-title">Shipping Charges</div>-->
-                        <!--<div class="item-after">$<span class="shipping-charges">0</span></div>-->
-                        <!--</div>-->
-                        <!--</div>-->
-                        <!--</li>-->
-                        <li>
-                            <div class="item-content">
-                                <div class="item-inner">
-                                    <div class="item-title"><b>Total</b></div>
-                                    <div class="item-after"><b>$<span class="payable-amount">0</span></b></div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
     </div>
     <!-- End: Page Content -->
 
     <!-- Begin: Bottom Toolbar -->
     <div class="toolbar toolbar-bottom">
         <div class="toolbar-inner">
-            <div class="grand-total">$0</div>
-            <a class="button button-fill color-green">Buy</a>
+            <div class="grand-total">0</div>
+            <a class="button button-fill color-green">Top up</a>
         </div>
     </div>
     <!-- End: Bottom Toolbar -->
