--- a/www/user-profile.html
+++ b/www/user-profile.html
@@ -75,6 +75,17 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-content-inner">
+                            <div class="buttons-row user-actions">
+                                <!--<button type="button" class="button button-fill color-pink">Follow</button>-->
+                                <button type="button" class="button button-fill color-green">Top up</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="tab-stocks" class="tab">
                 <!--<div class="card">-->
