added token prices and token balances

--- a/platforms/browser/www/cart.html
+++ b/platforms/browser/www/cart.html
@@ -31,6 +31,7 @@
                                             <div class="item-after" id="div-product" data-unit-price="70000">
                                                 $
                                                 <span class="product-amount">0</span>
+                                                <span class="product-token-amount" style="margin-left: 25px;">0</span>
                                             </div>
                                         </div>
                                         <!--<div class="item-subtitle">Color: Black | Storage: 128 GB</div>-->
@@ -85,7 +86,10 @@
                             <div class="item-content">
                                 <div class="item-inner">
                                     <div class="item-title"><b>Total</b></div>
-                                    <div class="item-after"><b>$<span class="payable-amount">0</span></b></div>
+                                    <div class="item-after">
+                                        <b>$<span class="payable-amount">0</span></b>
+                                        <b><span class="payable-token-amount" style="margin-left: 25px;">0</span></b>
+                                    </div>
                                 </div>
                             </div>
                         </li>
