--- a/www/sell.html
+++ b/www/sell.html
@@ -52,6 +52,25 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="card-content">
+                <div class="list-block no-hairlines no-hairlines-between">
+                    <ul class="price-summary">
+                        <li>
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title"><b>You'll get</b></div>
+                                    <div class="item-after">
+                                        <b>$<span class="payable-amount">0</span></b>
+                                        <b><span class="payable-token-amount" style="margin-left: 25px;">0</span></b>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- End: Page Content -->
 
