--- a/www/user-profile.html
+++ b/www/user-profile.html
@@ -16,12 +16,12 @@
     <div class="page-content">
 
         <!--<div class="profile-header">-->
-            <!--<img class="user-avatar img-circle" src="https://randomuser.me/api/portraits/men/60.jpg" alt="Avatar"/>-->
-            <!--<div class="user-name">Praveen Mujawdiya</div>-->
-            <!--<div class="buttons-row user-actions">-->
-                <!--<button type="button" class="button button-fill color-pink">Follow</button>-->
-                <!--<button type="button" class="button button-fill color-green">Message</button>-->
-            <!--</div>-->
+        <!--<img class="user-avatar img-circle" src="https://randomuser.me/api/portraits/men/60.jpg" alt="Avatar"/>-->
+        <!--<div class="user-name">Praveen Mujawdiya</div>-->
+        <!--<div class="buttons-row user-actions">-->
+        <!--<button type="button" class="button button-fill color-pink">Follow</button>-->
+        <!--<button type="button" class="button button-fill color-green">Message</button>-->
+        <!--</div>-->
         <!--</div>-->
 
         <div class="toolbar tabbar tabbar-scrollable tabbar-inline">
@@ -66,7 +66,14 @@
                                                 <div class="item-title">
                                                     <i class="material-icons">account_balance_wallet</i>
                                                 </div>
-                                                <div class="item-after" id="profile-token-balance"></div>
+                                                <ul>
+                                                    <li>
+                                                        <div class="item-after" id="profile-token-balance"></div>
+                                                    </li>
+                                                    <li>
+                                                        <div class="item-after" id="profile-balance"></div>
+                                                    </li>
+                                                </ul>
                                             </div>
                                         </div>
                                     </li>
@@ -89,22 +96,22 @@
             </div>
             <div id="tab-stocks" class="tab">
                 <!--<div class="card">-->
-                    <!--<div class="card-content">-->
-                        <!--<div class="card-content-inner">-->
-                            <!--<div class="col-100 tablet-33">-->
-                                <!--<div class="product-wrapper">-->
-                                    <!--<h1 id="stock-symbol">Nutella - Hazelnut Spread</h1>-->
-                                    <!--<p>Count: <strong id="stock-value">10</strong></p>-->
-                                    <!--<p>Token price: <strong id="stock-token-price">350</strong></p>-->
-                                    <!--<div class="product-actions">-->
-                                        <!--<div class="buttons-row">-->
-                                            <!--<button type="button" class="button button-fill" data-action="cart-add">Sell</button>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
+                <!--<div class="card-content">-->
+                <!--<div class="card-content-inner">-->
+                <!--<div class="col-100 tablet-33">-->
+                <!--<div class="product-wrapper">-->
+                <!--<h1 id="stock-symbol">Nutella - Hazelnut Spread</h1>-->
+                <!--<p>Count: <strong id="stock-value">10</strong></p>-->
+                <!--<p>Token price: <strong id="stock-token-price">350</strong></p>-->
+                <!--<div class="product-actions">-->
+                <!--<div class="buttons-row">-->
+                <!--<button type="button" class="button button-fill" data-action="cart-add">Sell</button>-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--</div>-->
                 <!--</div>-->
             </div>
         </div>
